Initial unit test example.

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ extras = test
 envdir = toxenv
 passenv = AWS_DEFAULT_REGION
 commands =
-      python -m pytest --ignore=node_modules --ignore=cdk.out
       flake8
+      pip install -r ./pipelines/{env:PIPELINE}/requirements.txt
+      python -m pytest -s
 
 [testenv:dev]
 extras = dev
@@ -29,9 +30,9 @@ exclude =
   __pycache__
   .git
   .tox
-  .venv*
-  .toxenv*
-  .devenv*
+  venv*
+  toxenv*
+  devenv*
   cdk.out
   *.egg-info
 max-line-length = 90
@@ -40,6 +41,15 @@ select = B,C,E,F,W,T4,B9
 
 [black]
 line-length = 90
+exclude =
+  __pycache__
+  .git
+  .tox
+  venv*
+  toxenv*
+  devenv*
+  cdk.out
+  *.egg-info
 
 [isort]
 profile = black
