--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envdir = toxenv
 passenv = AWS_DEFAULT_REGION
 commands =
       flake8
-      pip install -r ./pipelines/{env:PIPELINE}/requirements.txt
+      pip install -r ./aws_asdi_pipelines/pipelines/{env:PIPELINE}/requirements.txt
       python -m pytest -s
 
 [testenv:dev]
@@ -22,7 +22,7 @@ commands =
   nodeenv --node=18.0.0 -p
   npm install -g aws-cdk@2.45.0
   cdk --version
-  cdk {posargs:version}
+  pip install -e .
 
 [flake8]
 ignore = E203, E266, E501, W503, F403, E231
