--- a/aws_asdi_pipelines/pipelines/sentinel1/requirements.txt
+++ b/aws_asdi_pipelines/pipelines/sentinel1/requirements.txt
@@ -1,4 +1,5 @@
 aws-lambda-powertools
 jmespath
-stactools-sentinel1
+git+https://github.com/sharkinsspatial/sentinel1.git@kwargs_patch
+s3fs
 boto3
