--- a/aws_asdi_pipelines/pipelines/sentinel1/config.yaml
+++ b/aws_asdi_pipelines/pipelines/sentinel1/config.yaml
@@ -4,3 +4,4 @@
   collection: "sentinel1"
   compute: "awslambda"
   sns: "arn:aws:sns:eu-central-1:214830741341:SentinelS1L1C"
+  inventory_location: "s3://sentinel-inventory/sentinel-s2-l1c/sentinel-s2-l1c-inventory/hive/dt=2022-11-16-01-00/"
