--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,25 @@
 default_stages: [commit]
 exclude: '.png'
 repos:
-  - repo: local
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
     hooks:
-      - id: trailing-whitespace-fixer
-        name: trailing-whitespace-fixer
-        entry: trailing-whitespace-fixer
-        language: system
-
+      - id: check-yaml
       - id: end-of-file-fixer
-        name: end-of-file-fixer
-        entry: end-of-file-fixer
-        language: system
+      - id: trailing-whitespace
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
       - id: isort
-        name: isort
-        language: system
-        entry: isort
-        types: [python]
+        name: isort (python)
 
-      - id: black
-        name: black
-        language: system
-        entry: black
-        types: [python]
+  - repo: https://github.com/psf/black
+    rev: 22.3.0
+    hooks:
+    -   id: black
 
+  - repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
+    hooks:
       - id: flake8
-        name: flake8
-        language: system
-        entry: flake8
-        types: [python]
