--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,25 +1,32 @@
 default_stages: [commit]
 exclude: '.png'
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+  - repo: local
     hooks:
-      - id: check-yaml
+      - id: trailing-whitespace-fixer
+        name: trailing-whitespace-fixer
+        entry: trailing-whitespace-fixer
+        language: system
+
       - id: end-of-file-fixer
-      - id: trailing-whitespace
+        name: end-of-file-fixer
+        entry: end-of-file-fixer
+        language: system
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
-    hooks:
       - id: isort
-        name: isort (python)
+        name: isort
+        language: system
+        entry: isort
+        types: [python]
 
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-    -   id: black
+      - id: black
+        name: black
+        language: system
+        entry: black
+        types: [python]
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 5.0.4
-    hooks:
       - id: flake8
+        name: flake8
+        language: system
+        entry: flake8
+        types: [python]
