--- a/aws_asdi_pipelines/pipelines/aws_noaa_oisst_avhrr_only/config.yaml
+++ b/aws_asdi_pipelines/pipelines/aws_noaa_oisst_avhrr_only/config.yaml
@@ -1,6 +1,6 @@
 ---
-  id: "aws-noaa-oisst"
+  id: "aws_noaa_oisst_avhrr_only"
   compute: "awslambda"
   secret_arn: "arn:aws:secretsmanager:eu-central-1:751953039297:secret:asdi-auth-stack-alukach/asdi-workflows-6awSos"
-  ingestor_url: "https://crtx3178aa.execute-api.us-west-2.amazonaws.com/dev/ingestions"
+  ingestor_url: "https://crtx3178aa.execute-api.us-west-2.amazonaws.com/dev"
   queue: false
