--- a/aws_asdi_pipelines/pipelines/noaa_oisst/config.yaml
+++ b/aws_asdi_pipelines/pipelines/noaa_oisst/config.yaml
@@ -3,5 +3,6 @@
   compute: "awslambda"
   secret_arn: "arn:aws:secretsmanager:us-west-2:751953039297:secret:asdi-auth-stack-dev/asdi-workflows-fSzAw7"
   ingestor_url: "https://crtx3178aa.execute-api.us-west-2.amazonaws.com/dev/ingestions"
+  sns: "arn:aws:sns:us-east-1:709902155096:NewCDRSeaSurfTempOptInterpObject"
   inventory_location: "s3://nodd-bucket-inventory/noaa-cdr-sea-surface-temp-optimum-interpolation-pds/DailyCSV/hive/dt=2023-03-19-01-00/"
   historic_frequency: 0
