Include Athena table management and query invocation in stack.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envdir = toxenv
 passenv = AWS_DEFAULT_REGION
 commands =
       flake8
-      pip install -r ./aws_asdi_pipelines/pipelines/{env:PIPELINE}/requirements.txt
+      pip install -r ./aws_asdi_pipelines/pipelines/{env:PIPELINE}/requirements.txt --no-cache-dir
       python -m pytest ./aws_asdi_pipelines/pipelines/{env:PIPELINE} -s
 
 [testenv:dev]
