Update noaa_oisst tests to use pytest fixtures and fixture patching.

--- a/aws_asdi_pipelines/pipelines/sentinel1/requirements.txt
+++ b/aws_asdi_pipelines/pipelines/sentinel1/requirements.txt
@@ -1,5 +1,6 @@
 aws-lambda-powertools
 jmespath
-git+https://github.com/sharkinsspatial/sentinel1.git@kwargs_patch
+rasterio
+stactools-sentinel1
 s3fs
 boto3
