--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,27 +3,27 @@ exclude: '.png'
 repos:
   - repo: local
     hooks:
-      - id: trailing-whitespace-fixer
-        name: trailing-whitespace-fixer
-        entry: trailing-whitespace-fixer
-        language: system
+      # - id: trailing-whitespace-fixer
+      #   name: trailing-whitespace-fixer
+      #   entry: trailing-whitespace-fixer
+      #   language: system
 
-      - id: end-of-file-fixer
-        name: end-of-file-fixer
-        entry: end-of-file-fixer
-        language: system
+      # - id: end-of-file-fixer
+      #   name: end-of-file-fixer
+      #   entry: end-of-file-fixer
+      #   language: system
 
-      - id: isort
-        name: isort
-        language: system
-        entry: isort
-        types: [python]
+      # - id: isort
+      #   name: isort
+      #   language: system
+      #   entry: isort
+      #   types: [python]
 
-      - id: black
-        name: black
-        language: system
-        entry: black
-        types: [python]
+      # - id: black
+      #   name: black
+      #   language: system
+      #   entry: black
+      #   types: [python]
 
       - id: flake8
         name: flake8
