Fixing pipeline_id parameter

--- a/aws_asdi_pipelines/pipelines/amazonia_1/config.yaml
+++ b/aws_asdi_pipelines/pipelines/amazonia_1/config.yaml
@@ -1,5 +1,5 @@
 ---
-  id: "amazonia1"
+  id: "amazonia_1"
   compute: "awslambda"
   secret_arn: "arn:aws:secretsmanager:eu-central-1:751953039297:secret:asdi-auth-stack-alukach/asdi-workflows-6awSos"
   ingestor_url: "https://crtx3178aa.execute-api.us-west-2.amazonaws.com/dev"
