--- a/stactools_pipelines/pipelines/amazonia_1/config.yaml
+++ b/stactools_pipelines/pipelines/amazonia_1/config.yaml
@@ -1,7 +1,7 @@
 ---
   id: "amazonia_1"
   compute: "awslambda"
-  secret_arn: "arn:aws:secretsmanager:eu-central-1:751953039297:secret:asdi-auth-stack-alukach/asdi-workflows-6awSos"
+  secret_arn: "arn:aws:secretsmanager:us-west-2:751953039297:secret:asdi-auth-stack-dev/asdi-workflows-fSzAw7"
   ingestor_url: "https://crtx3178aa.execute-api.us-west-2.amazonaws.com/dev"
   sns: "arn:aws:sns:us-west-2:599544552497:NewAM1Quicklook"
   # inventory_location: ""
