Update Python environment and test directory discovery.

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py39
+envlist = py311
 
 [testenv]
 extras = test
 envdir = toxenv
 passenv = AWS_DEFAULT_REGION
 commands =
-      flake8
+      flake8 ./stactools_pipelines/pipelines/{env:PIPELINE}
       pip install -r ./stactools_pipelines/pipelines/{env:PIPELINE}/requirements.txt --no-cache-dir
       python -m pytest ./stactools_pipelines/pipelines/{env:PIPELINE} -s
 
